# nqs-rbm

./: .gitignore  README.md  config.json  hg_flax_helperfunctions.py  main.py  model.safetensors  paramerter.h5  pyproject.toml  test.ipynb  train_and_upload.py
scr/: config.json  functions.py  hamiltonian.py  mc_sampler.py  rbm.py
src/: config.json  hamiltonian.py  nqs_network.py  rbm.py  simulation.py  train.py
