[project]
name = "nqs-rbm"
version = "0.1.0"
description = "Simple Restricted Boltzmann Machine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "flax>=0.7.0",
    "huggingface-hub>=1.23.0",
    "jax>=0.4.12,<=0.7.2",
    "jupyter>=1.1.1",
    "jvmc>=1.5.8",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "orbax>=0.1.9",
    "safetensors>=0.8.0",
    "torch>=2.13.0",
]
